# easyeda_monkey

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  DEFERRED_FAILURES.toml  HELPER_TOOL_INVENTORY.toml  README.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  release.yml
docs/adrs/: ADR-001-easyeda-native-data-model-and-api-conventions.md  ADR-002-versioning-tagging-and-release-policy.md  ADR-003-cli-command-and-dependency-discipline.md  ADR-004-interface-design-doc-and-rack-ownership.md  ADR-005-test-support-helper-location.md  ADR-006-documentation-lifecycle-and-release-boundary.md  README.md
docs/canonical_format/: README.md
docs/design/: README.md  index.html  install-and-cli-tools.html  quality-signoff-status.md  styles.css
docs/design/api/: easyeda-native-data-model.html  index.html
docs/design/cli/: download-part.html  fetch-part.html  index.html
docs/plans/: 01_SYMBOL_FOOTPRINT_LIBRARY_PLAN.md  PUBLIC_REPO_BOOTSTRAP_PLAN.md  README.md
docs/research/: README.md
scripts/: install_smoke.py  py_signoff.py  py_signoff_baseline.json
src/py/easyeda_monkey/: __init__.py  cli.py  (+10 more)
tests/: README.md  rack.toml
tests/L0_foundation/: STRATUM.toml  conftest.py  test_L0_001_symbol_parse.py  test_L0_002_symbol_roundtrip.py  test_L0_005_footprint_parse.py  test_L0_008_svg_path_parse.py  test_L0_009_3d_model.py  test_L0_010_cli_fetch_part.py  test_L0_011_cli_download_part.py
tests/L99_signoff/: STRATUM.toml  test_L99_001_release_signoff.py  test_L99_002_design_docs.py  test_L99_003_quality_tools.py  test_L99_004_interface_design_docs.py
tests/support_scripts/: install_test.py  py_signoff.py  py_signoff_baseline.json
(+23 files in other folders)
