[project]
name = "easyeda-monkey"
version = "2026.5.26"
description = "Core EasyEDA / LCSC symbol, footprint, and 3D reference parsing tooling"
readme = "README.md"
requires-python = ">=3.11,<3.13"
license = { text = "AGPL-3.0-or-later" }
authors = [
    { name = "Wavenumber LLC" },
]
dependencies = [
    "requests>=2.32.0",
]

[project.scripts]
easyeda-monkey = "easyeda_monkey.cli:main"

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
    "pytest-json-report",
    "wn-rack>=1.1.0",
    "pyright>=1.1.390",
    "ruff>=0.8.0",
    "twine>=5.0.0",
    "build>=1.2.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-json-report",
    "wn-rack>=1.1.0",
    "pyright>=1.1.390",
    "ruff>=0.8.0",
    "twine>=5.0.0",
    "build>=1.2.0",
]

[project.urls]
Homepage = "https://github.com/wavenumber-eng/easyeda_monkey"
Repository = "https://github.com/wavenumber-eng/easyeda_monkey"
Issues = "https://github.com/wavenumber-eng/easyeda_monkey/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
include = [
    "src/py/easyeda_monkey/**",
    "scripts/**",
    "README.md",
    "CHANGELOG.md",
    "LICENSE",
    "CONTRIBUTING.md",
    "docs/**",
    "tests/**",
    "pyproject.toml",
]

[tool.hatch.build.targets.wheel]
packages = ["src/py/easyeda_monkey"]

[tool.hatch.version]
path = "src/py/easyeda_monkey/__init__.py"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src/py"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
markers = [
    "slow: long-running test lanes",
]
